@@ -57,6 +57,7 @@
 #include "xpm/ut2.xpm"
 
 #include "xpm/gamespy3d.xpm"
+#include "xpm/ssam.xpm"
 
 #include "xpm/green-plus.xpm"
 #include "xpm/red-minus.xpm"
@@ -118,6 +119,7 @@ struct pixmap ut2_pix;
 struct pixmap rune_pix;
 struct pixmap descent3_pix;
 struct pixmap gamespy3d_pix;
+struct pixmap ssam_pix;
 
 struct pixmap gplus_pix;
 struct pixmap rminus_pix;
@@ -225,6 +227,7 @@ void free_pixmaps (void) {
   free_pixmap (&rune_pix);
   free_pixmap (&descent3_pix);
   free_pixmap (&gamespy3d_pix);
+  free_pixmap (&ssam_pix);
 
   free_pixmap (&gplus_pix);
   free_pixmap (&rminus_pix);
@@ -302,6 +305,7 @@ void init_pixmaps (GtkWidget *window) {
   create_pixmap (window, &rune_pix, rune_xpm);
   create_pixmap (window, &descent3_pix, descent3_xpm);
   create_pixmap (window, &gamespy3d_pix, gamespy3d_xpm);
+  create_pixmap (window, &ssam_pix, ssam_xpm);
 
   create_pixmap (window, &gplus_pix, green_plus_xpm);
   create_pixmap (window, &rminus_pix, red_minus_xpm);
