@@ -66,6 +66,7 @@ extern	struct pixmap ut2_pix;
 extern	struct pixmap rune_pix;
 extern	struct pixmap descent3_pix;
 extern	struct pixmap gamespy3d_pix;
+extern	struct pixmap ssam_pix;
 
 extern	struct pixmap gplus_pix;
 extern	struct pixmap rminus_pix;
