@@ -1,0 +1,25 @@
+/* XPM */
+/* extracted from SeriousSam.exe with wrestool */
+static char * ssam_xpm[] = {
+"16 16 5 1",
+" 	c None",
+".	c #FF0000",
+"+	c #FFFF00",
+"@	c #000000",
+"#	c #808000",
+"       .        ",
+"      .+.       ",
+"   ....++....   ",
+"   .+@++++++.   ",
+"  .+@+@@@@#+.   ",
+"..++@#@@@@@@+...",
+" .++@+@@#@#@#+. ",
+" .++@#@+#@+@@+. ",
+" .++@#@@@@@@@+. ",
+"..+@@+@@#++@#+. ",
+" ..+++#@@@@@+...",
+"  .+++++@@#+.   ",
+"  .+++++++++.   ",
+"   ....++....   ",
+"   .   ..   .   ",
+"       ..       "};
